--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#contact">Contact</a>
         <a href="#cookingchronicles">Cooking Chronicles</a>
     </div>
-    <img src="./img/logo.webp" width="150" height="150">  <picture>
+    <img id="logo" src="./img/logo.webp" width="150" height="150">  <picture>
       <source media="(min-width: )" srcset=w">
       <img src1x="2x" alt="">
     </picture>  
