--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <a href="#contact">Contact</a>
         <a href="#cookingchronicles">Cooking Chronicles</a>
     </div>
+    <img src="./img/logo.webp" width="150" height="150">
     <picture>
-        <img id="logo" src="./img/logo.webp" width="150" height="150" alt="">
+        <source media="(min-width: )" srcset="w">
+        <img src1x="2x" alt="">
     </picture>
     <style>
         body {
