--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
-    <script src="scripts/main.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classic Recipes</title>
@@ -20,7 +19,7 @@
         <a href="#contact">Contact</a>
         <a href="#cookingchronicles">Cooking Chronicles</a>
     </div>
-    <img src="./img/logo.webp" width="150" height="150">
+    <img src="/img/logo.webp" width="150" height="150">
     <picture>
         <source media="(min-width: )" srcset="w">
         <img src1x="2x" alt="">
